src/objects/Competitive_Product__c.object
<CustomObject>
    <fields>
        <fullName>Total_GHz__c</fullName>
        <description>Get total number of processor GHz. Used in reports.</description>
        <formula>IF(ISBLANK(Clockspeed__c), 0.0,
IF(OR(ISPICKVAL(Processor_Cores__c, &apos;&apos;), ISPICKVAL(Processor_Cores__c, &apos;Proprietary&apos;), ISPICKVAL(Processor_Cores__c, &apos;Single Core&apos;)), Clockspeed__c, 
IF(ISPICKVAL(Processor_Cores__c, &apos;Single Core Multithreading&apos;), Clockspeed__c * 1.5, 
IF(ISPICKVAL(Processor_Cores__c, &apos;Dual Core&apos;), Clockspeed__c * 2.0, 
IF(ISPICKVAL(Processor_Cores__c, &apos;Dual Core Multithreading&apos;), Clockspeed__c * 2.5, 
IF(ISPICKVAL(Processor_Cores__c, &apos;Quad Core&apos;), Clockspeed__c * 4.0, 
IF(ISPICKVAL(Processor_Cores__c, &apos;Quad Core Multithreading&apos;), Clockspeed__c * 4.5,
IF(ISPICKVAL(Processor_Cores__c, &apos;Octa Core&apos;), Clockspeed__c * 8.0,
IF(ISPICKVAL(Processor_Cores__c, &apos;Octa Core Multithreading&apos;), Clockspeed__c * 8.5,
IF(ISPICKVAL(Processor_Cores__c, &apos;Hexa Core&apos;), Clockspeed__c * 16.0,
IF(ISPICKVAL(Processor_Cores__c, &apos;Hexa Core Multithreading&apos;), Clockspeed__c * 16.5, 0.0)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total GHz</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Touch_Screen__c</fullName>
        <label>Touch Screen</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USB__c</fullName>
        <label>USB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Calling__c</fullName>
        <label>Video Calling</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Player__c</fullName>
        <label>Video Player</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Recording__c</fullName>
        <label>Video Recording</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Water_Repellent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Water Repellent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight (g)</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wi_Fi_Direct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wi-Fi Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wi_Fi__c</fullName>
        <label>Wi-Fi</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X35_mm_Jack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3.5 mm Jack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3D_Display__c</fullName>
        <label>3D Display</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3G__c</fullName>
        <label>3G</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4G__c</fullName>
        <label>4G</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X__c</fullName>
        <label>X (mm)</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y__c</fullName>
        <label>Y (mm)</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Z__c</fullName>
        <label>Z (mm)</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isMotorola__c</fullName>
        <description>Used in Report. Do no change.</description>
        <formula>ISPICKVAL(Brand__c, &apos;MOTOROLA&apos;)</formula>
        <label>isMotorola</label>
        <type>Checkbox</type>
    </fields>
    <label>Competitive Product</label>
    <listViews>
        <fullName>All_Competitor_Products</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Product__c</columns>
        <columns>Entry_Period__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>notEqual</operation>
            <value>MOTOROLA</value>
        </filters>
        <label>All Competitor Products</label>
    </listViews>
    <listViews>
        <fullName>All_Motorola_Products</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Product__c</columns>
        <columns>Entry_Period__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>MOTOROLA</value>
        </filters>
        <label>All Motorola Products</label>
    </listViews>
    <listViews>
        <fullName>All_NPI_Products</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Product__c</columns>
        <columns>Entry_Period__c</columns>
        <columns>Region_Global__c</columns>
        <columns>Region_Asia__c</columns>
        <columns>Region_China__c</columns>
        <columns>Region_India__c</columns>
        <columns>Region_LATAM__c</columns>
        <columns>Region_NAM__c</columns>
        <columns>Region_WE__c</columns>
        <columns>Regions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_NPI__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All NPI Products</label>
    </listViews>
    <listViews>
        <fullName>Coming_Soon_Rumored</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Product__c</columns>
        <columns>Entry_Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entry_Period__c</field>
            <operation>equals</operation>
            <value>Coming Soon,Rumored</value>
        </filters>
        <label>Coming Soon &amp; Rumored</label>
    </listViews>
    <listViews>
        <fullName>Recently_Added</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Recently Added</label>
    </listViews>
    <nameField>
        <label>Brand-Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitive Products</pluralLabel>
    <recordTypes>
        <fullName>Competitor_Product</fullName>
        <active>true</active>
        <description>Competitor products</description>
        <label>Competitor Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Motorola_Product</fullName>
        <active>true</active>
        <description>Motorola products</description>
        <label>Motorola Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>